tests/parser-test-files/bad-files/toplevel-progn.2.coal
;; BAD: Toplevel Progn
(package test-package)

(progn
  (repr :transparent))
(define-type T
  (T Integer))
